tweak with java 21 switch syntax